<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollViewTvShows"
    tools:context=".ui.main.tvshow.TvShowsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_header_featured_tvshows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/featured_tv_shows"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_featured"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/yellow"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tv_list_tv_shows"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_featured_tvshows" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_featured_tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_header_featured_tvshows"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_featured_tvshows"
            tools:listitem="@layout/list_featured" />

        <TextView
            android:id="@+id/tv_list_tv_shows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/list_tv_shows"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_featured_tv_show" />

        <ProgressBar
            android:id="@+id/pb_list"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/yellow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_list_tv_shows" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_tv_shows"
            android:layout_width="0dp"
            android:layout_height="520dp"
            android:layout_marginTop="20dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_tv_shows"
            tools:listitem="@layout/list_movie_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>